Archive2/51/17d944b34372e2/output
main.cpp:1:10: error: #include expects "FILENAME" or <FILENAME>
 #include 'AsciiKontext.h'
          ^
main.cpp:3:6: error: 'AsciiKontext' has not been declared
 void AsciiKontext::NastavZnakPopredi(const char znak)
      ^
main.cpp:6:6: error: 'AsciiKontext' has not been declared
 void AsciiKontext::NastavZnakPozadi(const char zna)
      ^
main.cpp:9:5: error: 'AsciiKontext' has not been declared
 int AsciiKontext::VratVysku() const final
     ^
main.cpp:9:37: error: virt-specifiers in 'VratVysku' not allowed outside a class definition
 int AsciiKontext::VratVysku() const final
                                     ^
main.cpp:9:37: error: non-member function 'int VratVysku()' cannot have cv-qualifier
main.cpp: In function 'int VratVysku()':
main.cpp:11:1: warning: no return statement in function returning non-void [-Wreturn-type]
 }
 ^
main.cpp: At global scope:
main.cpp:12:5: error: 'AsciiKontext' has not been declared
 int AsciiKontext::VratSirku() const final
     ^
main.cpp:12:37: error: virt-specifiers in 'VratSirku' not allowed outside a class definition
 int AsciiKontext::VratSirku() const final
                                     ^
main.cpp:12:37: error: non-member function 'int VratSirku()' cannot have cv-qualifier
main.cpp: In function 'int VratSirku()':
main.cpp:14:1: warning: no return statement in function returning non-void [-Wreturn-type]
 }
 ^
main.cpp: At global scope:
main.cpp:15:6: error: 'AsciiKontext' has not been declared
 void AsciiKontext::Zobraz() const final
      ^
main.cpp:15:35: error: virt-specifiers in 'Zobraz' not allowed outside a class definition
 void AsciiKontext::Zobraz() const final
                                   ^
main.cpp:15:35: error: non-member function 'void Zobraz()' cannot have cv-qualifier
main.cpp:18:6: error: 'AsciiKontext' has not been declared
 void AsciiKontext::Zapis(const int x, const int y) final
      ^
main.cpp:18:52: error: virt-specifiers in 'Zapis' not allowed outside a class definition
 void AsciiKontext::Zapis(const int x, const int y) final
                                                    ^
main.cpp:21:6: error: 'AsciiKontext' has not been declared
 void AsciiKontext::Vymaz() final
      ^
main.cpp:21:28: error: virt-specifiers in 'Vymaz' not allowed outside a class definition
 void AsciiKontext::Vymaz() final
                            ^
