Archive2/51/17d944b34372e2/main.cpp
#include 'AsciiKontext.h'

void AsciiKontext::NastavZnakPopredi(const char znak)
{
}
void AsciiKontext::NastavZnakPozadi(const char zna)
{
}
int AsciiKontext::VratVysku() const final
{
}
int AsciiKontext::VratSirku() const final
{
}
void AsciiKontext::Zobraz() const final
{
}
void AsciiKontext::Zapis(const int x, const int y) final
{
}
void AsciiKontext::Vymaz() final
{
}
